--- a/04-Ridge-Regression-Sales-data.ipynb
+++ b/04-Ridge-Regression-Sales-data.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "# Ridge Regression\n",
     "\n",
-    "Ridge regression introduces a penalty for each coefficient. The penalty is introduced by adding the sum of the coefficients of the linear regression model to the loss function. The extent of the penalty is defined by the hyperparameter alpha which is multiplied with the sum of the coefficients. It is important to know that while the coefficients of the standard OLS regression are scale invariant, those of Ridge regression aren't.\n",
+    "Ridge regression introduces a penalty for each coefficient. The penalty is introduced by adding the sum of the squared coefficients of the linear regression model to the loss function. The extent of the penalty is defined by the hyperparameter alpha which is multiplied with the sum of the coefficients. It is important to know that while the coefficients of the standard OLS regression are scale invariant, those of Ridge regression aren't.\n",
     "\n",
     "The advantage of ridge regression over OLS is that to some extent ridge regression reduces the variance of the predictionms at cost at the expense of a slightly increased bias.\n",
     "\n",
