--- a/04-Ridge-Regression-Sales-data.ipynb
+++ b/04-Ridge-Regression-Sales-data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "id": "9b9582bf-bb0a-4f8f-b4fc-fe0f31fe4eec",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "id": "fb649156-b5ee-4993-8880-117c35ba0f1d",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "4  15000.0   8437.41       1406.00      Micro   56594.18"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 13,
    "id": "aab19f5f-9a71-49ec-9436-7608bd5815b1",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "id": "335667da-600f-4542-9fe2-3155ce95a642",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
     "# Initialize Ridge regression model\n",
     "ridge_std = Ridge(alpha = 0.5)\n",
     "\n",
-    "# Standardizing data (note that I do not use the pipe here which would be more efficient)\n",
+    "# Standardizing data (note that I do not use the pipe here which would be more efficient on purpose)\n",
     "X_train_scaler = preprocessing.StandardScaler().fit(X_train)\n",
     "X_test_scaler  = preprocessing.StandardScaler().fit(X_test)\n",
     "y_train_scaler = preprocessing.StandardScaler().fit(y_train.reshape(-1, 1))\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "id": "8d5d8544-e4fa-4d36-b98b-9a4849c01d5a",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "6               10  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 32,
    "id": "65148ca7-c92a-4b9f-af7c-a40b4535ad51",
    "metadata": {},
    "outputs": [
@@ -464,10 +464,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best alpha value: {'alpha': 0.0}\n",
-      "Coefficients (best ridge model): [[ 9.99906362e-01 -2.73041674e-04 -3.31013519e-04]]\n",
-      "Mean Squared Error (best ridge model): 0.0009884330608730249\n",
-      "R2 squared (best ridge model): 0.999011566939127\n"
+      "Best alpha value: Ridge(alpha=0.0)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'best_index_' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Print results\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest alpha value: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(ridge_cv\u001b[38;5;241m.\u001b[39mbest_estimator_))\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCoefficients (best ridge model): \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(ridge_cv\u001b[38;5;241m.\u001b[39mcv_results_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[43mbest_index_\u001b[49m]))\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean Squared Error (best ridge model): \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(mse))\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mR2 squared (best ridge model): \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(r2_squared))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'best_index_' is not defined"
      ]
     }
    ],
@@ -480,8 +488,8 @@
     "r2_squared = r2_score(y_test_std, y_pred_std_ridge_cv)\n",
     "\n",
     "# Print results\n",
-    "print(\"Best alpha value: {}\".format(ridge_cv.best_params_))\n",
-    "print(\"Coefficients (best ridge model): {}\".format(ols.coef_))\n",
+    "print(\"Best alpha value: {}\".format(ridge_cv.best_estimator_))\n",
+    "print(\"Coefficients (best ridge model): {}\".format(ridge_cv.cv_results_['params'][search.best_index_]))\n",
     "print(\"Mean Squared Error (best ridge model): {}\".format(mse))\n",
     "print(\"R2 squared (best ridge model): {}\".format(r2_squared))"
    ]
@@ -496,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "24a84d82-b5c6-46ba-ba1a-7b3737a9476f",
    "metadata": {},
    "outputs": [
