--- a/04-Ridge-Regression-Sales-data.ipynb
+++ b/04-Ridge-Regression-Sales-data.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "The advantage of ridge regression over OLS is that to some extent ridge regression reduces the variance of the predictionms at cost at the expense of a slightly increased bias.\n",
     "\n",
-    "In the following example, riddge regression is applied on sales data using expenditure for different media channels. First, I apply rdige regression with alpha = 0.5 and non standardized data. Then, I standardize the data and show that coefficients differ. Finally, I apply randomized search cross to hyptertune the model."
+    "In the following example, riddge regression is applied on sales data using expenditure for different media channels. First, I apply ridge regression with alpha = 0.5 and non standardized data. Then, I standardize the data and show that coefficients differ. Finally, I apply randomized search cross to hyptertune the model."
    ]
   },
   {
@@ -250,7 +250,7 @@
    "id": "ca312523-f6dd-4ea3-8b6e-762d2a43d6a0",
    "metadata": {},
    "source": [
-    "As stated above, coefficients differ when using standardized data since these are not scale invariant in ridge regressions. Next, I apply randomized search cross validation to hypertune alpha eventhough the fit is very good since we know that the larger alpha is, the more biased the model is. Therefore, a small alpoha should be preferred."
+    "As stated above, coefficients differ when using standardized data since these are not scale invariant in ridge regressions. Next, I apply randomized search cross validation to hypertune alpha eventhough the fit is very good since we know that the larger alpha is, the more biased the model is. Therefore, a small alpha should be preferred."
    ]
   },
   {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "65148ca7-c92a-4b9f-af7c-a40b4535ad51",
    "metadata": {},
    "outputs": [
@@ -464,18 +464,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best alpha value: Ridge(alpha=0.0)\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'best_index_' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Print results\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest alpha value: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(ridge_cv\u001b[38;5;241m.\u001b[39mbest_estimator_))\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCoefficients (best ridge model): \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(ridge_cv\u001b[38;5;241m.\u001b[39mcv_results_[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mparams\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[43mbest_index_\u001b[49m]))\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean Squared Error (best ridge model): \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(mse))\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mR2 squared (best ridge model): \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(r2_squared))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'best_index_' is not defined"
+      "Best alpha value: Ridge(alpha=0.0)\n",
+      "Coefficients (best ridge model): [[ 9.99906362e-01 -2.73041674e-04 -3.31013519e-04]]\n",
+      "Mean Squared Error (best ridge model): 0.0009884330608730249\n",
+      "R2 squared (best ridge model): 0.999011566939127\n"
      ]
     }
    ],
@@ -489,7 +481,7 @@
     "\n",
     "# Print results\n",
     "print(\"Best alpha value: {}\".format(ridge_cv.best_estimator_))\n",
-    "print(\"Coefficients (best ridge model): {}\".format(ridge_cv.cv_results_['params'][search.best_index_]))\n",
+    "print(\"Coefficients (best ridge model): {}\".format(ridge_cv.best_estimator_.coef_))\n",
     "print(\"Mean Squared Error (best ridge model): {}\".format(mse))\n",
     "print(\"R2 squared (best ridge model): {}\".format(r2_squared))"
    ]
@@ -504,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "24a84d82-b5c6-46ba-ba1a-7b3737a9476f",
    "metadata": {},
    "outputs": [
