--- a/05-Lasso-Regeression-Sales-data.ipynb
+++ b/05-Lasso-Regeression-Sales-data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 135,
    "id": "b48622e2-47dd-4a9a-940d-c274b26945a6",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
    "source": [
     "# Lasso Regression\n",
     "\n",
-    "Ridge regression introduces a penalty for each coefficient. The penalty is introduced by adding the sum of the absolute value of the squared coefficients of the linear regression model to the loss function. The extent of the penalty is defined by the hyperparameter alpha which is multiplied with the sum of the coefficients. It is important to know that while the coefficients of the standard OLS regression are scale invariant, those of Lasso regression aren't which is the same like when applying Ridge regression.\n",
+    "Lasso regression introduces a penalty for each coefficient. The penalty is introduced by adding the sum of the absolute value of the squared coefficients of the linear regression model to the loss function. The Lasso regressions is also called a L1 regularization. The extent of the penalty is defined by the hyperparameter alpha which is multiplied with the sum of the coefficients. It is important to know that while the coefficients of the standard OLS regression are scale invariant, those of Lasso regression aren't which is the same like when applying Ridge regression.\n",
     "\n",
     "The advantage of Lasse regression over OLS is that to some extent ridge regression reduces the variance of the predictionms at cost at the expense of a slightly increased bias. Furthermore, in contrast to Ridge, the Lasso can rule out some of the coeffients completely and can therefore be used for feature selection and reduction.\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 136,
    "id": "b72865fe-2ef6-4b1e-aaed-9b4b90ca5e82",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "4  15000.0   8437.41       1406.00      Micro   56594.18"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 137,
    "id": "7bad59bc-4797-4e2c-a6df-3c85eb5762ef",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 138,
    "id": "723879c3-5b15-4ce0-8519-c3d43df138a5",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "4 -1.496545 -1.005995     -0.867238 -1.460270"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 139,
    "id": "d1758d16-dfc5-41e0-bde3-ae9950a571c6",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 140,
    "id": "96027a70-2d2f-45ba-8dde-e479b997d6dc",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 141,
    "id": "8e7efa27-34b5-4058-9d23-7f8c296b66b8",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "8                2  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 142,
    "id": "b82db1d7-2e76-4853-9fcd-dc3ae69c4bbd",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 143,
    "id": "491a686b-b83a-47dc-9c19-6be8410d657f",
    "metadata": {},
    "outputs": [
